--- a/overlay-lineage/MiatollLineageSDK/AndroidManifest.xml
+++ b/overlay-lineage/MiatollLineageSDK/AndroidManifest.xml
@@ -4,7 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lineageos.platform.xiaomi_sm6250">
+    package="lineageos.platform.xiaomi_miatoll">
 
     <overlay
         android:isStatic="true"
