--- a/overlay/MiatollFrameworks/AndroidManifest.xml
+++ b/overlay/MiatollFrameworks/AndroidManifest.xml
@@ -4,7 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.xiaomi_sm6250">
+    package="android.xiaomi_miatoll">
 
     <overlay
         android:isStatic="true"
